--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 server.port=1002
-
-
 # Gives us access to the H2 database web console
 spring.h2.console.enabled=true
 # Generates the database *only* if it's not there yet
@@ -10,7 +8,6 @@ spring.datasource.url=jdbc:h2:file:~/social-multiplication;DB_CLOSE_ON_EXIT=FALS
 # For educational purposes we will show the SQL in console
 spring.jpa.properties.hibernate.show_sql=true
 
-
-
+## RabbitMQ configuration
 multiplication.exchange=multiplication_exchange
 multiplication.solved.key=multiplication.solved
